--- a/app/assets/stylesheets/member.css.sass
+++ b/app/assets/stylesheets/member.css.sass
@@ -237,7 +237,8 @@ span
 
 
 .page-heading
-  background: url(http://cloudspokes.s3.amazonaws.com/page-heading-bg.gif) no-repeat 0 0
+  //background: url(http://cloudspokes.s3.amazonaws.com/page-heading-bg.gif) no-repeat 0 0
+  background-color: #456179
   padding: 0 20px
   border-bottom: 1px solid #303b42
   h2
@@ -245,4 +246,4 @@ span
     line-height: 47px
     font-weight: 400
     color: #fff
-    padding: 27px 0 15px
+    padding: 10px
