--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -1,5 +1,5 @@
+	<div class="page-heading"><h2 class="melbourne">Challenges</h2></div>
         <div class="page">
-            <h1 id="heading">Challenges</h1>
             <div class="categories">
 				<table cellspacing="0" border="0" style="border-collapse:collapse;">
 					<tr>
@@ -19,7 +19,7 @@
             </div>
         <!-- END Page heading -->
         <!-- Help Nav -->
-        <div class="help-nav">
+        <div class="help-nav" style="margin-right: -20px">
             <!-- Sort -->
             <div class="sort fl">
                 <ul>
