--- a/app/views/challenges/recent.html.erb
+++ b/app/views/challenges/recent.html.erb
@@ -1,6 +1,5 @@
+<div class="page-heading"><h2 class="melbourne">Recently Completed Challenges</h2></div>
     <div class="page">
-        <h1 id="heading">Recently Completed Challenges</h1>
- 
     <!-- Content Wrapper -->
     <div class="challenge-content-wrapper">
         <!-- List Challenges -->
