--- a/app/views/content/faq.html.erb
+++ b/app/views/content/faq.html.erb
@@ -1,5 +1,6 @@
-<div class='page'>
-  <h1 id='heading'>FAQs</h1>
+<div class="page-heading"><h2 class="melbourne">FAQ</h2></div>
+
+<div class="content-wrapper">
 
   <p class='big'>The Developer Community is now officially open for business! As a busy consultant trying to juggle life, projects and Facebook status updates, why on earth would you want to devote time to the community and its various challenges? You may be surprised by there are multitude of reasons why you should get involved in the community.</p>
 
@@ -172,3 +173,4 @@
     you’d like to compete in, do amazing work, and submit it. Welcome to CloudSpokes!
   </ol>
 </div>
+
