--- a/app/views/content/privacy.html.erb
+++ b/app/views/content/privacy.html.erb
@@ -1,5 +1,6 @@
-<div class="page">
-  <h1 id='heading'>Privacy Policy</h1>
+<div class="page-heading"><h2 class="melbourne">Privacy Policy</h2></div>
+
+	<div class="content-wrapper">
          This privacy statement covers the Web site <a href="http://www.CloudSpokes.com">www.CloudSpokes.com</a> ("Site") and personally identifiable information about users of our services and products ("Services") . 
 If you have questions or concerns regarding this statement, you should first contact <a href="mailto:security@appirio.com">security@appirio.com</a>. Upon request and within 30 days, Appirio will grant individuals reasonable access to personal information that it holds about them. In addition, Appirio will take reasonable steps to permit individuals to correct, amend, or delete information that is demonstrated to be inaccurate or incomplete. Please contact <a href="mailto:security@appirio.com">security@appirio.com</a> to change your personal information gathered on the Site.
 <br><br>
