--- a/app/views/content/tos.html.erb
+++ b/app/views/content/tos.html.erb
@@ -1,4 +1,7 @@
-<div class="page"><h1 id='heading' class='upcase'>Cloudspokes Community Terms of Service</h1>
+	<div class="page-heading"><h2 class="melbourne">Terms of Service</h2></div>
+
+		<div class="content-wrapper">
+	
             <br>
             <br>
             <center>
@@ -7,7 +10,6 @@
             </center>
             <br>
             <br>
-            <div style="padding-left: 50px;">
                 <p>
                     Appirio, Inc. ("Appirio" or "us" or "we") welcomes you to (and related sub-domains
                     (the "Website"). By using or accessing any part of the Website, you are agreeing
@@ -344,5 +346,5 @@
                                 PERMANENTLY BARRED.</div>
                     </div>
                 <p></p>
-            </div>
+
           </div>
