--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@ $(document).ready(function(){
       <nav id='menu'><ul>
         <li><%= link_to "Members", members_path %></li>
         <li><%= link_to "Challenges", "/challenges" %></li>
-        <li><%= link_to "Badges", "#" %></li>
+        <li><%= link_to "Badges", "/badges" %></li>
         <li><%= link_to "Account", "/account" %></li>
       </ul></nav>
       <nav id='side_menu'><ul>
