--- a/app/views/challenges/leaderboard.html.erb
+++ b/app/views/challenges/leaderboard.html.erb
@@ -1,6 +1,5 @@
-        <div class="page">
-            <h1 id="heading">Leaderboards</h1>
-        
+	<div class="page-heading"><h2 class="melbourne">Leaderboards</h2></div>
+        <div class="page">        
         <!-- Content Wrapper -->
         <div class="challenge-content-wrapper ">
 			<%= flash_messages %>
