worked on the static content

--- a/app/assets/stylesheets/accounts.css.sass
+++ b/app/assets/stylesheets/accounts.css.sass
@@ -194,6 +194,14 @@
     padding: 6px 5px
     width: 150px
     height: 16px
+  .file
+    margin-bottom: 50px
+    margin-left: 10px
+    padding: 6px 5px
+    width: 336px
+    height: 16px
+  .profile-pic
+    margin: 10px
   .txt
     margin-bottom: 10px
     padding: 6px 5px
