--- a/app/views/content/home.html.erb
+++ b/app/views/content/home.html.erb
@@ -3,8 +3,8 @@
     <h1>Join Us</h1>
     <p>Participate in challenges, build a diverse portfolio, learn something new, and earn a little cash money on the side too.</p>
     <nav>
-      <%= link_to "Join Now", "#", class: 'btn' %>
-      <%= link_to "Learn More", "#", class: 'btn light' %>
+      <%= link_to "Challenges", "/challenges", class: 'btn' %>
+      <%= link_to "Learn More", "/about", class: 'btn light' %>
     </nav>
   </aside>
 </section>
