finished the payments page

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -296,3 +296,22 @@ a.btn
 .developSkillbadgeimgdiv
   float: left
   width: 148px
+
+.fancytable
+  font-size: 11px
+  background: #fff
+  margin-bottom: 50px
+  width: 550px
+  border-collapse: collapse
+  text-align: left
+
+.fancytable th
+  font-size: 14px
+  font-weight: normal
+  color: #6699C9
+  padding: 10px 8px
+  border-bottom: 2px solid
+
+.fancytable td
+  border-bottom: 1px solid #ccc
+  padding: 6px 8px
