--- a/app/views/challenges/recent.html.erb
+++ b/app/views/challenges/recent.html.erb
@@ -12,7 +12,7 @@
                     <div class="box-b">
                         <div class="box-t">
                             <div class="col-left fl">
-                                <h4><%= link_to "#{record["Name"]}", "/challenges/#{record['ID__c']}" %></h4>
+                                <h4><%= link_to "#{record["Name"]}", challenge_url(record["ID__c"]) %></h4>
                                 <p><%= record["Description__c"].gsub(/<\/?[^>]*>/, "")[0..500] %>...</p>
                             </div>
                             <div class="col-right fr">
@@ -20,7 +20,7 @@
 									<%= Time.parse(record["End_Date__c"]).strftime("%b. %d, %Y") %>
 									<br/><strong>Top Prize: <%= record["Top_Prize__c"] %></strong>
 									<br/><span><%= category_display(record['Challenge_Categories__r']) %></span>
-									<br/><span><%= record["Challenge_Participants__r"]["totalSize"]%> Participants &middot; <a href="/challenges/<%= record["ID__c"] %>/results">View the Winners</a></span>
+									<br/><span><%= record["Challenge_Participants__r"]["totalSize"]%> Participants &middot; <%= link_to "View the Winners", results_url(record['ID__c']) %></span>
 									<% if !record["License__c"].nil? %>
 										<br/><span><%= record["License__c"] %> license</span>
 									<% end %>
